--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "concurrently \"pnpm src\" \"pnpm temp\"",
     "clean": "concurrently \"pnpm src:clean\" \"pnpm temp:clean\" \"rm shared/style/main.css\"",
     "src": "windicss src/**/*.html -f windi.config.js -ads --style",
-    "src:clean": "find src -type f -name '*.windi.css' -delete",
+    "src:clean": "del src/**/*.windi.css",
     "temp": "windicss shared/components/*.html -f windi.config.js -adzmo shared/style/main.css --style",
     "temp:sep": "concurrently \"pnpm temp\" \"pnpm windicss shared/components/*.html -f windi.config.js -adszm --style\"",
-    "temp:test": "windicss shared/templates/tests/**/*.html -f windi.config.js -ads --style",
-    "temp:clean": "find shared/templates -type f -name '*.windi.css' -delete"
+    "temp:test": "windicss shared/components/tests/**/*.html -f windi.config.js -ads --style",
+    "temp:clean": "del 'shared/style/*.css'"
   },
   "author": "",
   "license": "ISC",
