--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "clean": "concurrently \"pnpm src:clean\" \"pnpm temp:clean\" \"rm shared/style/main.css\"",
     "src": "windicss src/**/*.html -f windi.config.js -ads --style",
     "src:clean": "del src/**/*.windi.css",
-    "temp": "windicss shared/components/*.html -f windi.config.js -adzmo shared/style/main.css --style",
-    "temp:sep": "concurrently \"pnpm temp\" \"pnpm windicss shared/components/*.html -f windi.config.js -adszm --style\"",
-    "temp:test": "windicss shared/components/tests/**/*.html -f windi.config.js -ads --style",
+    "temp": "windicss shared/{components,page}/*.html -f windi.config.js -adzmo shared/style/main.css --style",
+    "temp:sep": "concurrently \"pnpm temp\" \"pnpm windicss shared/{components,page}/*.html -f windi.config.js -adszm --style\"",
+    "temp:test": "windicss shared/{components,page}/tests/**/*.html -f windi.config.js -ads --style",
     "temp:clean": "del 'shared/style/*.css'"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@splinetool/runtime": "^0.9.148"
+  },
   "devDependencies": {
     "@windicss/plugin-icons": "^1.0.2",
     "@windicss/plugin-scrollbar": "^1.2.3",
